Add Java 17 to build/test matrix